--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MONGODB_PRIVATE_PORT=27017
-MONGODB_PRIVATE_DB="rimod"
+MONGODB_PRIVATE_DB="rimod23"
 GOOGLE_MONGO_IP="localhost"
 APP_GLOBAL_API="https://www.rimod-ftd.org/private"
 SECRET="RNASEQ!"
 NODE_PRIVATE="/private"
-PORT=9002
+PORT=9003
